--- a/samples/tab-ui-templates/ts/package.json
+++ b/samples/tab-ui-templates/ts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "microsoft-teams-app-sample",
+  "name": "microsoft-teams-app-sample-vue",
   "version": "0.1.3",
-  "description": "Microsoft Teams application sample.",
+  "description": "Microsoft Teams application sample using Vue 3.",
   "homepage": ".",
   "author": {
     "name": "Alexander Katrukhin",
@@ -17,7 +17,8 @@
     "Platform",
     "Teams App",
     "Application",
-    "React",
+    "Vue",
+    "Vue 3",
     "Fluent UI",
     "yeoman-generator",
     "Microsoft Teams",
@@ -28,30 +29,27 @@
     "microsoft-365",
     "teams toolkit"
   ],
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
+    "serve": "vite & gulp start-ngrok",
+    "package": "gulp manifest"
+  },
   "dependencies": {
-    "@fluentui/react": "^8.112.9",
-    "@fluentui/react-components": "^9.42.0",
-    "@fluentui/react-northstar": "^0.51.3",
-    "@fluentui/react-search-preview": "^0.1.34",
-    "@fluentui/react-teams": "^0.1.0-alpha.10",
+    "@fluentui/vue-components": "^9.42.0",
+    "@fluentui/web-components": "^2.5.16",
     "@microsoft/teams-js": "^2.0.0",
-    "@uifabric/example-data": "^7.1.5",
     "faker": "^5.1.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-router-dom": "^5.2.0",
-    "web-vitals": "^0.2.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.6.0",
     "@types/faker": "^5.1.5",
-    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.13",
-    "@types/react": "^17.0.71",
-    "@types/react-dom": "^17.0.25",
-    "@types/react-router-dom": "^5.1.6",
+    "@vitejs/plugin-vue": "^4.3.4",
     "axios": "^0.21.0",
     "env-cmd": "^10.1.0",
     "gulp": "^4.0.2",
@@ -59,17 +57,11 @@
     "gulp-zip": "^5.0.2",
     "ngrok": "^3.3.0",
     "plugin-error": "^1.0.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.11",
     "yargs": "^16.2.0",
     "z-schema": "^5.0.0"
-  },
-  "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
-    "start": "set PORT=53000 && react-scripts start",
-    "serve": "react-scripts start & gulp start-ngrok",
-    "build": "react-scripts build",
-    "package": "gulp manifest"
   },
   "browserslist": {
     "production": [
